--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,16 @@
 {
     "manifest_version": 3,
-    "name": "YT Sentiment Analysis",
+    "name": "YouTube Sentiment Analysis",
     "version": "1.0",
-    "description": "Send text to API and receive sentiment response",
+    "description": "Analyzes YouTube video comments for sentiment.",
     "action": {
         "default_popup": "popup.html"
     },
     "permissions": [
-        "scripting"
+        "tabs",
+        "activeTab",
+        "scripting",
+        "http://localhost/*",
+        "https://www.googleapis.com/*"
     ]
 }
